--- a/src/components/common/Modal/index.css
+++ b/src/components/common/Modal/index.css
@@ -1,18 +1,14 @@
 .modal {
     position: fixed;
-    left: 0;
-    top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, .5);
-    color: #fff;
-    font-size: 3em;
+    left: 0;
+    top: 0;
 }
 
-.modal p{
+.modal-center {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    margin: 0;
 }
